--- a/ExamApp.Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ExamApp.Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -13,18 +13,8 @@
         <div class='navbar-collapse collapse'>
             <ul class='nav navbar-nav'>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/home']">
-                        <span class='glyphicon glyphicon-home'></span> Home
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/counter']">
-                        <span class='glyphicon glyphicon-education'></span> Counter
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/fetch-data']">
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
+                    <a [routerLink]="['/employee']">
+                        <span class='glyphicon glyphicon-education'></span> Employee
                     </a>
                 </li>
             </ul>
