--- a/ExamApp.Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ExamApp.Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -5,7 +5,6 @@
                 <span class='sr-only'>Toggle navigation</span>
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
             </button>
             <a class='navbar-brand' [routerLink]="['/home']">ExamApp.Web</a>
         </div>
@@ -15,6 +14,13 @@
                 <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/employee']">
                         <span class='glyphicon glyphicon-education'></span> Employee
+                    </a>
+                </li>
+            </ul>
+            <ul class='nav navbar-nav'>
+                <li>
+                    <a (click)="logout()">
+                        <span class='glyphicon glyphicon-education'></span> Logout
                     </a>
                 </li>
             </ul>
